fix: 🐛 nav button scaling improved on mobile
states default scaling for the site

Related: #71

--- a/src/styles/layout/Header.scss
+++ b/src/styles/layout/Header.scss
@@ -121,11 +121,23 @@ header {
     outline: none;
     font-size: 1.8rem;
     z-index: 99;
-    width: 5vw;
+    width: 10vw;
 
     .times {
       display: none;
     }
+  }
+}
+
+@media screen and (min-width: 450px) {
+  header > .toggle {
+    width: 6vw;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  header > .toggle {
+    width: 5vw;
   }
 }
 
